[project]
name = "bbc-news-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр Вольнов",email = "DEDAN3209@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.33.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
